Tested box models and added additional CSS styling to texts/content.

--- a/styles/style.css
+++ b/styles/style.css
@@ -21,6 +21,33 @@ h2 {
 
 }
 
+h3 {
+  font-family:Gerogia, serif;
+  text-transform: lowercase;
+}
+
+span {
+  font-weight:bold;
+
+}
+
+#keepup {
+  text-decoration: overline;
+}
+
+#about {
+  text-decoration: overline;
+}
+
+p {
+
+}
+
+.aboutsum {
+  border: 2px solid black;
+  padding: 10px;
+}
+
 blockquote {
   font-family: "Courier New";
   background-color: #EBDEF0;
@@ -44,14 +71,22 @@ nav > ul {
   color: #A569BD;
   background-color: #EBDEF0;
   padding: 15px;
+  border: 1px solid #A569BD;
+
 
 }
 
 nav > ul > li {
   display: inline;
-
+  border: 3px solid #A569BD;
   padding: 15px;
+  background-color: #EBDEF6;
 
+}
+
+ol > li {
+  border: 1px solid #A569BD;
+  padding: 10px;
 }
 
 a:hover {
